# eka-eval

./: README.md  benchmark_config.txt  crosssum_en_test.json  crosssum_gu_test.json  crosssum_kn_test.json  crosssum_or_test.json  crosssum_pa_test.json  crosssum_ta_test.json  flores_bn_enxx_test.json  flores_gu_enxx_test.json  flores_hi_enxx_test.json  flores_kn_enxx_test.json  flores_mr_enxx_test.json  flores_or_enxx_test.json  flores_ta_enxx_test.json  flores_te_enxx_test.json  main.py  main2.py  main_script.py  mbpp_detailed_results_google_gemma-2b_20250603_091807.jsonl  mbpp_detailed_results_google_gemma-2b_20250603_093707.jsonl  mbpp_detailed_results_google_gemma-2b_20250603_101720.jsonl  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  run_benchmarks.py  run_benchmarks2.py  s.py  s2.py  test_script.py  uni.py  xorqa_gu_test.json  xorqa_hi_test.json  xorqa_pa_test.json  xorqa_ta_test.json  xorqa_ur_test.json  xquad_as_test.json  xquad_bn_test.json  xquad_gu_test.json  (+7 more)
checkpoints_quac/: quac_checkpoint_proc0_gpu0.json
checkpoints_squad/: squad_checkpoint_proc0_gpu0.json
docs/: benchmarks.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
eval_tasks/: abc.md
flores_enhanced_eval_results/: flores_all_detailed_logs_20250627_013326.json  flores_en-as_detailed_results.json  flores_en-bn_detailed_results.json  flores_en-gu_detailed_results.json  flores_en-hi_detailed_results.json  flores_en-kn_detailed_results.json  flores_en-ml_detailed_results.json  flores_en-mr_detailed_results.json  (+6 more)
utils/: setup_logging.py
(+357 files in other folders)
